syntax = "proto3";

package entities;

import "product.base.proto";

message CropEntity {
    string id = 1;
    int32 growthStageDuration = 2;
    int32 growthStages = 3;
    int32 price = 4;
    bool premium = 5;
    bool perennial = 6;
    int32 nextGrowthStageAfterHarvest = 7;
    int32 minHarvestQuantity = 8;
    int32 maxHarvestQuantity = 9;
    int32 basicHarvestExperiences = 10;
    int32 premiumHarvestExperiences = 11;
    bool availableInShop = 12;
    int32 maxStack = 13;
    ProductEntity product = 14;
}